--- a/examples/rest_queries.ipynb
+++ b/examples/rest_queries.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +32,7 @@
        "'http://ecp.iedadata.org/restsearchservice?outputtype=json&author=klump'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -47,7 +47,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'RESTClientQuery(author=barnes)'"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "q.__repr__()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +76,7 @@
        "0"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -67,27 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'0'"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "requests.get(q.url + '&searchtype=count').json()['Count']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -99,14 +99,12 @@
     }
    ],
    "source": [
-    "%matplotlib inline\n",
-    "\n",
     "q.dataframe()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +295,7 @@
        "[5 rows x 109 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,16 +308,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f3813659828>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f3813666320>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -327,7 +325,7 @@
      "data": {
       "image/png": "iVBORw0KGgoAAAANSUhEUgAAAYIAAAEKCAYAAAAfGVI8AAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAADl0RVh0U29mdHdhcmUAbWF0cGxvdGxpYiB2ZXJzaW9uIDIuMS4yLCBo\ndHRwOi8vbWF0cGxvdGxpYi5vcmcvNQv5yAAAFNxJREFUeJzt3X+w3XV95/Hn60IIqYk1kovLJrIB\nRCt2Y8SUZZetY+uPKlv5seAq3a101ykdLTN2dQtUO7N0a2cpap11dNhiZYodhFIpC0PFyrIoo1Ux\nYAhQtPy0BCgEGjSxMSTc9/5xvtFDuOfek5DvOffe7/Mxc+Z8v5/v95zv+3NvvveV7+9UFZKk7poY\ndwGSpPEyCCSp4wwCSeo4g0CSOs4gkKSOMwgkqeMMAknqOINAkjrOIJCkjjtw3AUMY8WKFbV69epx\nlyFJ88qtt976RFVNzjbfvAiC1atXs379+nGXIUnzSpLvDTOfu4YkqeMMAknqOINAkjrOIJCkjjMI\nJKnj5sVZQ5LUBavP+6sfDz94wb8b2XLdIpCkOaA/BKYbb5NBIEljNuiP/qjCwCCQpI4zCCSp41oL\ngiQHJ7klye1J7krye037EUm+meSeJH+e5KC2apCk+WDQgeFRHTBuc4tgB/CLVfVqYC3wliTHA38I\nfLyqjga2AO9usQZJmhf2/KM/yrOGWjt9tKoK2NaMLmpeBfwi8CtN+6XA+cBFbdUhSfPFKP/492v1\nGEGSA5JsAB4HbgDuA56qql3NLJuAlW3WIEmaWatBUFXPVNVaYBVwHPDK6Wab7rNJzkqyPsn6zZs3\nt1mmJHXaSM4aqqqngC8DxwMvSrJ7l9Qq4JEBn7m4qtZV1brJyVmfqyBJ2kdtnjU0meRFzfAS4I3A\n3cBNwOnNbGcC17RVgyRpdm3ea+gw4NIkB9ALnCur6rokfwtckeTDwLeBz7RYgyRpFm2eNbQReM00\n7ffTO14gSZoDvLJYkjrOIJCkjjMIJKnjDAJJ6jiDQJI6ziCQpI4zCCSp4wwCSeo4g0CSOs4gkKSO\nMwgkqeMMAknqOINAkjrOIJCkjjMIJKnjDAJJ6jiDQJI6ziCQpI4zCCSp4wwCSeo4g0CSOs4gkKSO\nMwgkqeNaC4IkL01yU5K7k9yV5H1N+/lJHk6yoXmd2FYNkqTZHdjid+8CPlBVtyVZBtya5IZm2ser\n6qMtLluSNKTWgqCqHgUebYa3JrkbWNnW8iRJ+2YkxwiSrAZeA3yzaTo7ycYklyRZPuAzZyVZn2T9\n5s2bR1GmJHVS60GQZClwFfBbVfUD4CLgKGAtvS2Gj033uaq6uKrWVdW6ycnJtsuUpM5qNQiSLKIX\nApdV1V8CVNVjVfVMVU0BnwaOa7MGSdLM2jxrKMBngLur6o/62g/rm+1U4M62apAkza7Ns4ZOAH4V\nuCPJhqbtg8AZSdYCBTwI/EaLNUiSZtHmWUNfBTLNpC+0tUxJ0t7zymJJ6jiDQJI6ziCQpI4zCCSp\n4wwCSeo4g0CSOs4gkKSOMwgkqeMMAknqOINAkjrOIJCkjjMIJKnjDAJJ6jiDQJI6bkEHwZPbdnD7\nQ0/x5LYd4y5FkuasNh9MM1bXbHiYc6/ayKKJCXZOTXHhaWs4ae3KcZclSXPOgtwieHLbDs69aiM/\n2jnF1h27+NHOKc65aqNbBpI0jQUZBJu2bGfRxLO7tmhigk1bto+pIkmauxZkEKxavoSdU1PPats5\nNcWq5UvGVJEkzV0LMggOWbqYC09bw8GLJli2+EAOXjTBhaet4ZCli8ddmiTNOQv2YPFJa1dywstW\nsGnLdlYtX2IISNIACzYIoLdlYABI0sxa2zWU5KVJbkpyd5K7kryvaX9xkhuS3NO8L2+rBknS7No8\nRrAL+EBVvRI4HvjNJMcA5wE3VtXRwI3NuCRpTFoLgqp6tKpua4a3AncDK4GTgUub2S4FTmmrBknS\n7EZy1lCS1cBrgG8CL6mqR6EXFsCho6hBkjS91oMgyVLgKuC3quoHe/G5s5KsT7J+8+bN7RUoSR3X\nahAkWUQvBC6rqr9smh9Lclgz/TDg8ek+W1UXV9W6qlo3OTnZZpmS1GltnjUU4DPA3VX1R32TrgXO\nbIbPBK5pqwZJ0uzavI7gBOBXgTuSbGjaPghcAFyZ5N3A3wNvb7EGSdIsWguCqvoqkAGT39DWciVJ\ne2dB3mtIkjQ8g0CSOs4gkKSOMwgkqeMMAkmao57ctoPbH3qq9cfsLujbUEvSfHXNhoc596qNLJqY\nYOfUFBeetoaT1q5sZVluEUjSHPPkth2ce9VGfrRziq07dvGjnVOcc9XG1rYMDAJJmmM2bdnOooln\n/3leNDHBpi3bW1meQSBJc8yq5UvYOTX1rLadU1OsWr6kleUNFQRJXp7kxiR3NuNrkvxuKxVJUscd\nsnQxF562hoMXTbBs8YEcvGiCC09b09qjd4c9WPxp4LeBPwaoqo1JPgd8uJWqJKnjTlq7khNetoJN\nW7azavmSVp+/PmwQ/FRV3dK7oeiP7WqhHklS45Cli1sNgN2GPUbwRJKjgAJIcjrwaGtVSZJGZtgt\ngt8ELgZ+JsnDwAPAf2qtKknSyAwVBFV1P/DGJC8AJpqH0UuSFoAZgyDJ+we0A7DHk8ckSfPQbFsE\ny5r3VwA/R+8xkwBvA25uqyhJ0ujMGARV9XsASb4EHLt7l1CS84G/aL06SVLrhj1r6HDg6b7xp4HV\n+70aSdLIDXvW0J8BtyS5mt4ppKcCn22tKknSyAx71tAfJLke+Pmm6T9X1bfbK0uSNCpDBUGSw4En\ngKv726rq79sqTJI0GsPuGvormquKgSXAEcB3gVcN+kCSS4BfBh6vqp9t2s4Hfh3Y3Mz2war6wt6X\nLUnaX4bdNfQv+8eTHAv8xiwf+1Pgkzz3WMLHq+qjwxYoSWrXPj2PoKpuo3ddwUzz3Az84758vyRp\ndIY9RtB/hfEEcCw/2b2zt85O8i5gPfCBqtqyj98jSdoPht0iWNb3WkzvmMHJ+7C8i4CjgLX07l76\nsUEzJjkryfok6zdv3tfMkSTNZtiDxX9bVc+6kjjJ29nLq4ur6rG+z38auG6GeS+md8dT1q1bV4Pm\nkyQ9P8NuEfzOkG0zSnJY3+ipwJ17+x2SpP1rtruPvhU4EViZ5BN9k17ILE8oS3I58HpgRZJNwH8H\nXp9kLb1TUR9k9jOPJEktm23X0CP0DuqeBNza174V+K8zfbCqzpim+TN7VZ0kqXWz3X30duD2JJdV\nlc8olqQFaLZdQ1dW1X8Avp3kOQdsq2pNa5VJkkZitl1D72vef7ntQiRJ4zHjWUNV9Wgz+N6q+l7/\nC3hv++VJkto27Omjb5qm7a37sxBJ0njMdozgPfT+539kko19k5YBX2uzMEnSaMx2jOBzwPXA/wTO\n62vfWlXeUE6SFoDZTh/9PvB94AyAJIcCBwNLkyz1wTSSNP8NdYwgyduS3AM8AHyF3lXB17dYlyRp\nRIY9WPxh4Hjg76rqCOANeIxAkhaEYYNgZ1U9CUwkmaiqm+jdSlqSNM8Nexvqp5IsBW4GLkvyOLPc\ndE6SND8Mu0VwMrCd3o3mvgjcB7ytraIkSaMz7MPrf9g3emlLtUiSxmC2C8q20nt2wHMmAVVVL2yl\nKknSyMx2HcGyURUiSRqPYY8RSJIWKINAkjrOIJCkjjMIJKnjDAJJ6jiDQJI6ziCQpI5rLQiSXJLk\n8SR39rW9OMkNSe5p3pe3tXxJ0nDa3CL4U+Ate7SdB9xYVUcDN/Lsp55JksagtSCoqpuBPR9neTI/\nuVfRpcApbS1fkjScUR8jeElVPQrQvB864uVLkvYwZw8WJzkryfok6zdv3jzuciRpwRp1EDyW5DCA\n5v3xQTNW1cVVta6q1k1OTo6sQEnqmlEHwbXAmc3wmcA1I16+JGkPbZ4+ejnwdeAVSTYleTdwAfCm\nJPcAb2rGJUljNOwzi/daVZ0xYNIb2lqmJGnvzdmDxZKk0TAIJKnjDAJJ6jiDQJI6ziCQpI4zCCSp\n4wwCSeo4g0CSOs4gkKSOMwgkqeMMAknqOINAkjrOIJCkjjMIJKnjDAJJ6jiDQJI6ziCQpI4zCCSp\n4wwCSeo4g0CSOs4gkKSOMwgkqeMOHMdCkzwIbAWeAXZV1bpx1CFJGlMQNH6hqp4Y4/IlSbhrSJI6\nb1xBUMCXktya5Kwx1SBJYny7hk6oqkeSHArckOQ7VXVz/wxNQJwFcPjhh4+jRknqhLFsEVTVI837\n48DVwHHTzHNxVa2rqnWTk5OjLlGSOmPkQZDkBUmW7R4G3gzcOeo6JEk949g19BLg6iS7l/+5qvri\nGOqQJDGGIKiq+4FXj3q5kqTpefqoJHWcQSBJHWcQSFLHGQSS1HEGgSR1nEEgSR1nEEhSxxkEktRx\nBoEkdZxBIEkdZxBIUscZBJLUcQaBJHWcQSBJHWcQSFLHGQSS1HEGgSR1nEEgSR1nEEhSxxkEktRx\nBoEkdZxBIEkdZxBooCe37eD2h57iyW07xl2KpBYdOI6FJnkL8L+AA4A/qaoLxlGHBrtmw8Oc8/nb\nOSATPFNTfOT0V3PS2pXjLktSC0a+RZDkAOBTwFuBY4Azkhwz6jo02JPbdvCBKzewY1fxTzufYceu\n4v1XbnDLQFqgxrFr6Djg3qq6v6qeBq4ATh5DHRrgrkd+wK6pZ7ftmuq1S1p4xhEEK4GH+sY3NW2a\nM2ov2yXNZ+MIgkzT9py/MEnOSrI+yfrNmzePoCzt9s9/esletUua38YRBJuAl/aNrwIe2XOmqrq4\nqtZV1brJycmRFSf44dPPsPiA5+b19Xf+wxiqkdS2cQTBt4CjkxyR5CDgncC1Y6hDA6xavmTa7bZP\n3nSvB4ylBWjkQVBVu4Czgb8G7gaurKq7Rl2HBjtk6WLO/oWjn9N+0AETbNqyfQwVSWrTWC4oq6ov\nVNXLq+qoqvqDcdSgmf3KvzqcxQc++5/Hzqmp3taCpAXFK4s1rUOWLuYjp6/h4EUTLFt8IAcvmuDC\n09ZwyNLF4y5N0n42liuLNT+ctHYlJ7xsBZu2bGfV8iWGgLRAGQSa0SFLFxsA0gLnriFJ6jiDQJI6\nziCQpI4zCCSp4wwCSeq4VM39O0om2Qx8r6WvXwE80dJ3j9pC6Yv9mFsWSj9g4fRl2H78i6qa9WZt\n8yII2pRkfVWtG3cd+8NC6Yv9mFsWSj9g4fRlf/fDXUOS1HEGgSR1nEEAF4+7gP1oofTFfswtC6Uf\nsHD6sl/70fljBJLUdW4RSFLHdSoIkrw9yV1JppKs62tfnWR7kg3N63/3TXttkjuS3JvkE0mme+by\nSA3qRzPtd5pav5vkl/ra39K03ZvkvNFXPbMk5yd5uO93cGLftGn7NJfN9Z/3TJI82Pyb35BkfdP2\n4iQ3JLmneV8+7jr3lOSSJI8nubOvbdq60/OJ5vezMcmx46v82Qb0o931o6o68wJeCbwC+DKwrq99\nNXDngM/cAvxreg9vvB546xzuxzHA7cBi4AjgPuCA5nUfcCRwUDPPMePuxx59Oh/4b9O0T9uncdc7\nS1/m/M97lvofBFbs0XYhcF4zfB7wh+Ouc5q6Xwcc278uD6obOLFZnwMcD3xz3PXP0o9W149ObRFU\n1d1V9d1h509yGPDCqvp69X7qnwVOaa3AIc3Qj5OBK6pqR1U9ANwLHNe87q2q+6vqaeCKZt75YFCf\n5rL5/PMe5GTg0mb4UubAerCnqroZ+Mc9mgfVfTLw2er5BvCiZn0fuwH9GGS/rB+dCoJZHJHk20m+\nkuTnm7aVwKa+eTY1bXPVSuChvvHd9Q5qn2vObjbTL+nb9TBfau83H2vuV8CXktya5Kym7SVV9ShA\n837o2KrbO4Pqno+/o9bWjwX3YJok/xf4Z9NM+lBVXTPgY48Ch1fVk0leC/yfJK+it9m4p5GcZrWP\n/RhU73SBP/LTxWbqE3AR8Pv06vp94GPAf2GMv4PnYT7W3O+EqnokyaHADUm+M+6CWjDffketrh8L\nLgiq6o378JkdwI5m+NYk9wEvp5euq/pmXQU8sj/qHKKmve4HvXpf2jfeX++g9pEZtk9JPg1c14zO\n1Ke5aj7W/GNV9Ujz/niSq+ntangsyWFV9WizC+XxsRY5vEF1z6vfUVU9tnu4jfXDXUNAkskkBzTD\nRwJHA/c3m5JbkxzfnC30LmDQ/8bngmuBdyZZnOQIev24BfgWcHSSI5IcBLyzmXfO2GP/7KnA7jMm\nBvVpLpvzP+9BkrwgybLdw8Cb6f0urgXObGY7k7m9HvQbVPe1wLuas4eOB76/exfSXNT6+jHuI+Qj\nPhp/Kr0E3QE8Bvx1034acBe9o++3AW/r+8y65od+H/BJmovw5mI/mmkfamr9Ln1nONE7S+Lvmmkf\nGncfpunTnwF3ABubf9yHzdanufya6z/vGeo+slkPbm/WiQ817YcANwL3NO8vHnet09R+Ob3dvDub\n9ePdg+qmt0vlU83v5w76zr4b92tAP1pdP7yyWJI6zl1DktRxBoEkdZxBIEkdZxBIUscZBJLUcQaB\nOiHJtha+86TddxZNckqSY/bhO7685x1kpVEzCKR9VFXXVtUFzegp9O4EKc07BoE6pbmS9CNJ7mzu\nuf+Opv31zf/OP5/kO0kua64mJ8mJTdtXm3vYX9e0/1qSTyb5N8BJwEeae8Uf1f8//SQrkjzYDC9J\nckVz87A/B5b01fbmJF9PcluSv0iydLQ/HXXVgrvXkDSLfw+sBV4NrAC+leTmZtprgFfRu1fL14AT\n0nswyx8Dr6uqB5JcvucXVtXfJLkWuK6qPg+Qwc8veg/wT1W1Jskaeleyk2QF8LvAG6vqh0nOBd4P\n/I/90WlpJgaBuubfApdX1TP0bkj2FeDngB8At1TVJoAkG+g9sGgbvftOPdB8/nLgrOd86/BeB3wC\noKo2JtnYtB9Pb9fS15oQOQj4+vNYjjQ0g0BdM9OjRnf0DT9Db/3Y10eT7uInu14P3mPadPd1CXBD\nVZ2xj8uT9pnHCNQ1NwPvSHJAkkl6/0Of6W6N3wGOTLK6GX/HgPm2Asv6xh8EXtsMn77H8v8jQJKf\nBdY07d+gtyvqZc20n0ry8iH6Iz1vBoG65mp6d3C8Hfh/wDlV9Q+DZq6q7cB7gS8m+Sq9u71+f5pZ\nrwB+u3nK3VHAR4H3JPkbescidrsIWNrsEjqHJoSqajPwa8DlzbRvAD/zfDoqDcu7j0qzSLK0qrY1\nZxF9Crinqj4+7rqk/cUtAml2v94cPL4L+Gl6ZxFJC4ZbBJLUcW4RSFLHGQSS1HEGgSR1nEEgSR1n\nEEhSxxkEktRx/x9eBw0jMNWihQAAAABJRU5ErkJggg==\n",
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x7f3813659208>"
+       "<matplotlib.figure.Figure at 0x7f38135ef470>"
       ]
      },
      "metadata": {},
@@ -335,6 +333,8 @@
     }
    ],
    "source": [
+    "%matplotlib inline\n",
+    "\n",
     "df.plot('longitude', 'latitude', 'scatter')"
    ]
   },
