--- a/examples/rest_queries.ipynb
+++ b/examples/rest_queries.ipynb
@@ -8,7 +8,7 @@
     {
      "data": {
       "text/plain": [
-       "'0.0.2+2.g5fe1c0f.dirty'"
+       "'0.0.2+10.g6c92ed4.dirty'"
       ]
      },
      "execution_count": 1,
@@ -45,9 +45,7 @@
     }
    ],
    "source": [
-    "from earthchem.query import RESTClientQuery\n",
-    "\n",
-    "q = RESTClientQuery(author='klump')\n",
+    "q = earthchem.Query(author='klump')\n",
     "q.url"
    ]
   },
@@ -119,7 +117,7 @@
     }
    ],
    "source": [
-    "q = RESTClientQuery(author='barnes')\n",
+    "q = earthchem.Query(author='barnes')\n",
     "q.count()"
    ]
   },
@@ -349,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -410,7 +408,7 @@
        "              'type']})"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -421,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -453,7 +451,7 @@
        " ('type', 'object')]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -503,24 +501,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from matplotlib import pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7fd8d4e716a0>"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "data": {
       "image/png": "iVBORw0KGgoAAAANSUhEUgAAAXwAAAEKCAYAAAARnO4WAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAADl0RVh0U29mdHdhcmUAbWF0cGxvdGxpYiB2ZXJzaW9uIDIuMS4yLCBo\ndHRwOi8vbWF0cGxvdGxpYi5vcmcvNQv5yAAAFohJREFUeJzt3X9w5HV9x/HXe5O9vUCAi8mpcDm8\njqe1QHNRU7UTRbix9qr0anvWsf6oYzte7YjitJqMdZRaxxk5KrbTYh0qFDuiHWpElFbFKb8KM2Bz\nmIvAiTIOeDloOUIOLposm+y7f+wubHK7d99N9rvf3e/n+ZjJSDbf/X4/n4n3ymffn8/38zV3FwAg\n/TJJNwAA0BoEPgAEgsAHgEAQ+AAQCAIfAAJB4ANAIAh8AAgEgQ8AgSDwASAQ3Uk3oNrAwIBv27Yt\n6WYAQMfYv3//E+6+OcqxbRX427Zt0+TkZNLNAICOYWaPRD2Wkg4ABILAB4BAEPgAEAgCHwACQeAD\nQCAIfAAIBIGPtjM7n9eBQ0c1O59P9BxA2rTVOnzgxqnDGp+YVjaTUaFY1L49Q9o9vKXl5wDSiBE+\n2sbsfF7jE9NaLBR1LL+kxUJRYxPTDY3Sm3EOIK0IfLSNmbkFZTMr/y+ZzWQ0M7fQ0nMAaUXgo20M\n9vWoUCyueK1QLGqwr6el5wDSisBH2+jvzWnfniFtzGZ0Wq5bG7MZ7dszpP7eXEvPAaSVuXvSbXjW\nyMiIs3kaZufzmplb0GBfz5qDuhnnADqBme1395Eox7JKB22nvze37pBuxjmAtKGkAwCBIPABIBAE\nPgAEgsAHgEAQ+AAQiFhX6ZjZw5KOSVqWtBR16RAAoPlasSzzQnd/ogXXAQCcACUdAAhE3IHvkm42\ns/1mtrfWAWa218wmzWzyyJEjMTcHAMIVd+CPuvsrJP2OpA+Y2fmrD3D3q9x9xN1HNm/eHHNzACBc\nsQa+uz9a/t/HJd0g6VVxXg8AUF9sgW9mp5rZaZX/lvRGSffFdT0AwInFuUrnBZJuMLPKdb7q7t+N\n8XoAgBOILfDd/WeSdsR1fgBAY1iWCQCBIPABIBAEPgAEgsAHgEAQ+AAQCAIfAAJB4ANAIAh8AAgE\ngQ8AgSDwASAQBD4ABILAB4BAEPgAEAgCH0BDZufzOnDoqGbn80k3BQ2Kcz98AClz49RhjU9MK5vJ\nqFAsat+eIe0e3pJ0sxARI3wAkczO5zU+Ma3FQlHH8ktaLBQ1NjHNSL+DEPgAIpmZW1A2szIyspmM\nZuYWEmoRGkXgA4hksK9HhWJxxWuFYlGDfT3U9TsENXwAkfT35rRvz5DGVtXw73zoCer6HYLABxDZ\n7uEtGt0+oJm5BQ329UiSRi+7RYuFohZVGv2PTUxrdPuA+ntzSTYVNVDSAWKS1jJHf29OO7ZuUn9v\njrp+h2GED8QglOWLJ6rro/0wwgeaLM3LF1d/aqnU9TdmMzot162N2Yz27RminNOmGOEDTVYpc1Rq\n2tJzZY5ODsJ6n1pW1/U7uY9pR+ADTZbGMkf1p5bKH7KPfv2ANp2S1blnnaH+3hxB3wEo6QBN1ill\njkYmlWtNzuaXXO//yr0avewWfWvqcFzNRBMxwgdi0O5ljkYnlWt9apGkXz6zLImlmJ2CET4Qk+rl\ni+1kLZPK1Z9aTsl2HfdzlmJ2BgIfCMxa187vHt6iu8Z36ovvfqVy3Svf3+lzFKEg8IHArGdSub83\np/NfulmXv7X95yhwPGr4QGDq7YnTSGC3+xwFaiPwgQA1I7BZitl5CHwgUAR2eKjhA0AgCHwACETs\ngW9mXWb2QzO7Ke5rAQDqa8UI/xJJB1twHQDACcQa+GY2KOnNkr4U53UAACcX9wj/7ySNSTp+Ew4A\nQEvFFvhmdpGkx919/0mO22tmk2Y2eeTIkbiaAwDBi3OEPyppt5k9LOnfJO00s6+sPsjdr3L3EXcf\n2bx5c4zNAYCwxRb47v4xdx90922S3i7pFnd/V1zXAwCcGOvwASAQLdlawd1vk3RbK64FAKiNET4A\nBILAB4BAEPgAEAgCHwACQeADQCAIfAAIBIEPAIEg8IEUmJ3P68Cho5qdzyfdFLQxnmkLdLgbpw5r\nfGJa2UxGhWJR+/YMaffwlqSbhTbECB/oYLPzeY1PTGuxUNSx/JIWC0WNTUwz0kdNBD7QwWbmFpTN\nrPxnnM1kNDO3kFCL0M4IfKANrLUGP9jXo0Jx5fOFCsWiBvt6mtk8pAQ1fCBh66nB9/fmtG/PkMZW\nvb+/Nxdzq9GJCHwgQdU1+MXyk0DHJqY1un0gcmjvHt6i0e0Dmplb0GBfD2GPugh8IEGVGvxi1WOf\nKzX4RoK7vzcXS9DPzuf5Q5IiBD6QoCRq8FFDnOWe6UPgAwlqdQ3+xqnDGvv6tLoypuWi6+ILt+sd\nrz77uOs1o9SE9kPgAwlrVQ1+dj6vj/z7ARWW/dnXPvf9n+gfb/2pLn/rjhVtaFapCe2FwAfaQFw1\n+Gr3P/rUirCvyC+5/uL6KXVlMtrQVfqU8YmLzmG5ZwqxDh9Yp87Zx8bq/mSpKOWXnrtb99M3PaBP\nvPkcbcxmdFquWxuzGZZ7pgAjfGAdOmli89yzTld3phTuJ5PNZHTeljN01/hOVumkCCN8YI06bR+b\n/t6crnjbsHLdpmz5X/7GbEa5blNXZuXof3Fp+dmQ37F1E2GfEozwgTXqxInN6gniUzd06RfPLOvU\nDV3a9fd3rDjO/fhaPzofgQ+sUafsY1O97l7ScSWaA4eOqifbrWP5pWff05Ptbus/XFgbAh9Yo7jX\n0Ne7QaqRu1+r5xgWCksyM23s7lox31DrD9czy8t6auEZzc7nCf0UsXb66DYyMuKTk5NJNwNoSBzb\nD9SbDG5kknh2Pq/Ry27RYqH2LO3GbEZ3je9Uf29O35o6/Owfrnp/GNCezGy/u49EOTbyCN/Mdkh6\nXfnb/3b3A2tpHJA2zV5DX+8u13POPL2hu19rzTFUq55vqNT273/0ab3vXyeVXyqqsLx00mugs0Ra\npWNml0i6TtLzy19fMbMPxtkwIFT1HmoydehoQw87qVWqqbZ6vqG/N6czerLa0MUDVdIq6rLMP5X0\nanf/pLt/UtJrJL0vvmYB4ao3GTy8dVNDk8SVOYbKzVOrVl7qbSODx43aO2UiGmsTNfBN0nLV98s6\n0W17ANZsdVBX7nLd/oLTar5+olLL7uEtumt8p65858uV7Vr5T/b6yZnj7hmod23KOekQtYb/L5Lu\nMbMbyt+/RdLV8TQJQL0N1day0VqpVLNBG7q6lF96bullvXsGeKBKekUKfHe/wsxuk/RalUb273X3\nH8bZMCB09SaDa71+spVCjZZqWrGZG1ovUuCb2fMkPVz+qryWdfdCPM0COl9cT4tafd4oSzV59i2k\n6CWdeyVtlTSn0gh/k6THzOxxSe9z9/0xtQ/oSHFtqrb6vJ+46Bx9+qYHIi3VrF56KbnOPeuMdbcH\nnSVq4H9X0g3u/j1JMrM3Stol6XpJX5D06niaB3SeuJ4WVeu8n/r2A8quWn5zov187nzoiY7Z3RPN\nF3WVzkgl7CXJ3W+WdL673y2Jz4RAlXrr6Ne7lr3mebtMheVotflO290TzRc18J80s3Eze1H5a0zS\nUTPrkmrfxmdmG83sB2Z2wMzuN7NPNa3VQBuLay17rfMuF12X/u65kZZRxvWHCJ0jaknnHZIulXSD\nSjX8OyW9XVKXpLfVeU9e0k53nzezrKQ7zew75U8FQGrFNUFa77y7h7do13kvPOkEMTdVIWrgb5M0\nqFLYd0u6QNLr3X1I0kO13uClXdnmy99my1/ts1MbEKO41rLXO2+UZZSs1EGk3TLN7EFJH5F0n6pK\nOO7+yEne1yVpv6Ttkq509/Eax+yVtFeSzj777Fc+8sgJTwlgneJaLopkxLFb5hF3/3ajDXH3ZUnD\nZrZJ0g1mdp6737fqmKskXSWVtkdu9BoAGsNNVeGKGviXmtmXJP2XSrV5SZK7fyPKm939aPlO3V0q\nfUoAALRY1MB/r6SXqVSHr5R0XFLdwDezzZIK5bDvkfQGSZeto60AREkGaxc18He4+683eO4zJX25\nXMfPSLre3W9q8BwAqsR1By/CEDXw7zazc9z9gagndvdpSS9fW7MArBbXHbwIR9Qbr14racrMHjSz\naTP7kZlNx9kwACtx4xTWK+oIf1esrQACF6Uuz41TWK+o++GzOB5oglrBHrUuz41TWK+oI3wA61Qr\n2Ee3DzRUl+dpVFiPqDV8ACqN0A8cOtrwDpP1dqq8/9GnG67L9/fmtGPrJsIeDWOED0S0niWRlQnX\nxarNZUtB79Tl0TKM8IEI1ruXfL0J13PPOkP79gwp1206JdulXLdRl0dsCHwggvUuiaxMuNbat760\ngZSV9qKVnfA8wHpQ0gEiaMaSyFoTrpVPDvml585dmbSVxOQsmorAByJo1pLI1TtV1qvtX3fPz/WF\n2x5iCwU0FYEPRBTHkshanxyeWS7qylt/qvySs4UCmooaPtCAZi+JrFXbv/jC7drQ1bXiOLZQSK+1\nLvVdC0b4QMJWf3KQpCtvW/nk0HZbqskWzc3R6t1PCXygDayu7bfzFgps0dwcSex+SuADbahdt1Bg\ni+bmqTdhPzO3QOADoWnHZ88mEVJplcTup0zaAoiMLZqb50Q348WFET6AyNiiublaXboj8AE0pF3n\nFzpVK0t3BD6AhrXj/AJOjho+AASCwAeAQBD4ABAIAh8AAkHgA0AgCHwACASBDwCBIPABIBAEPpBi\nrXy4Btofd9oCKcW+9ViNET6QQtX71h/LL2mxUNTYxDQj/cAR+EATRC2dtKrEUtm3vhrPxQUlHWCd\nopZOWlliYd961MIIH2jA6hF61NJJq0ssSTxcA+2PET4QUa0R+ov6T430yL8kHg3IvvVYLbYRvplt\nNbNbzeygmd1vZpfEdS0gbvVG6Kdu6IpUOkmqxNLfm9OOrZsIe0iKt6SzJOkv3f3XJL1G0gfM7JwY\nrwfEpt4k6C+eWY5UOqHEgnYQW0nH3R+T9Fj5v4+Z2UFJWyQ9ENc1gbicaIS+Y+umSKUTSixIWksm\nbc1sm6SXS7qnFdcDmu1kI/SopRNKLEhS7JO2ZtYraULSh9396Ro/3ytprySdffbZcTcHWLNWj9Bn\n5/N8GkBTmbvHd3KzrKSbJH3P3a842fEjIyM+OTkZW3uATsG2CIjKzPa7+0iUY+NcpWOSrpZ0MErY\nAyhhWwTEJc4a/qikd0vaaWZT5a83xXg9IBXYFgFxiXOVzp2SLK7zA2l1sjX71PaxVtxpC7SZyoqg\nsVU1/P7eHLV9rAuBD7ShWiuCqmv7lS0axiamNbp9gJE+IiHwgTbV35tLfD8epAu7ZQIdgi2PsV4E\nPtAh2I8H60VJB+gg7MeD9SDwgQ6zurYPREVJBwACQeADQCAIfAAIBIEPAIEg8AEgEAQ+AASCwAeA\nQBD4ABAIAh8AAkHgA0AgCHwACASBDwCBIPABIBAEPgAEgsAHgEAQ+AAQCAIfAAJB4ANAIAh8AAgE\ngQ8AgSDwASAQBD4ABILAB4BAEPgAEAgCHwACQeADQCAIfAAIRCoCf3Y+rwOHjmp2Pp90UwCgbXXH\ndWIzu0bSRZIed/fz4rrOjVOHNT4xrWwmo0KxqH17hrR7eEtclwOAjhXnCP9aSbtiPL9m5/Man5jW\nYqGoY/klLRaKGpuYZqQPADXEFvjufoekJ+M6vyTNzC0om1nZhWwmo5m5hTgvCwAdqaNr+IN9PSoU\niyteKxSLGuzrSahFaAbmZIB4JB74ZrbXzCbNbPLIkSMNvbe/N6d9e4a0MZvRablubcxmtG/PkPp7\nczG1FnG7ceqwRi+7Re/60j0avewWfWvqcNJNAlLD3D2+k5ttk3RT1EnbkZERn5ycbPg6s/N5zcwt\naLCvh7DvYLPzeY1edosWC899atuYzeiu8Z38XoE6zGy/u49EOTa2VTqt1N+bIxBSoDIns6jnAr8y\nJxPn75cBA0IR57LMr0m6QNKAmc1IutTdr47reuh8SczJsKwXIYlzlc4fufuZ7p5190HCHifT6jkZ\nlvUiNKko6SA9dg9v0ej2gZaUWJIqIQFJIfDRdlo1J8OyXoQm8WWZQFJY1ovQMMJH0FpZQgKSRuAj\neCzrRSgo6QBAIAh8AAgEgQ8AgSDwASAQBD4ABILAB4BAxLo9cqPM7IikR6peGpD0RELNiVua+yal\nu3/0rTOltW8vcvfNUQ5sq8Bfzcwmo+7z3GnS3Dcp3f2jb50pzX2LipIOAASCwAeAQLR74F+VdANi\nlOa+SenuH33rTGnuWyRtXcMHADRPu4/wAQBN0jaBb2bXmNnjZnZf1Wt/aGb3m1nRzDp2dr1O3y43\nsx+b2bSZ3WBmm5Js41rV6duny/2aMrObzeysJNu4HrX6V/Wzj5iZm9lAEm1brzq/u782s8Pl392U\nmb0pyTauVb3fm5l90MweLOfKvqTal5S2CXxJ10rateq1+yT9gaQ7Wt6a5rpWx/ft+5LOc/chST+R\n9LFWN6pJrtXxfbvc3YfcfVjSTZI+2fJWNc+1Or5/MrOtkn5L0s9b3aAmulY1+ibp8+4+XP76zxa3\nqVmu1aq+mdmFkn5P0pC7nyvpbxNoV6LaJvDd/Q5JT6567aC7P5hQk5qmTt9udvel8rd3SxpsecOa\noE7fnq769lRJHTtRVKt/ZZ+XNKZ09q3j1enbn0v6rLvny8c83vKGJaxtAj9wfyLpO0k3opnM7DNm\ndkjSO9XZI/zjmNluSYfd/UDSbYnJxeWS3DVm1pd0Y5ropZJeZ2b3mNntZvYbSTeo1Qj8hJnZxyUt\nSbou6bY0k7t/3N23qtSvi5NuT7OY2SmSPq6U/RGr8k+SXixpWNJjkj6XbHOaqltSn6TXSPqopOvN\nzJJtUmsR+Akys/dIukjSOz2962O/KmlP0o1oohdL+hVJB8zsYZVKcfea2QsTbVWTuPv/ufuyuxcl\n/bOkVyXdpiaakfQNL/mBpKJK++sEg8BPiJntkjQuabe7/zLp9jSTmb2k6tvdkn6cVFuazd1/5O7P\nd/dt7r5NpRB5hbv/b8JNawozO7Pq299XaeFEWnxT0k5JMrOXStqgdG6mVlfbPMTczL4m6QJJA2Y2\nI+lSlSZd/kHSZkn/YWZT7v7bybVyber07WOScpK+X/5Uebe7vz+xRq5Rnb69ycx+VaUR1COSOq5f\nFbX65+5XJ9uq5qjzu7vAzIZVmox+WNKfJdbAdajTt2skXVNeqvmMpPek+JN1TdxpCwCBoKQDAIEg\n8AEgEAQ+AASCwAeAQBD4ABAIAh8oM7OHzWzAzLaa2a1mdrC8q+IlEd6bmh1CkV4sywTKynfOjkjK\nSjrT3e81s9Mk7Zf0Fnd/4ATvPb2yaZyZfUjSOZ14XwXSjRE+gmRm3zSz/eUR/N7qn7n7Y+5+b/m/\nj0k6KGlL+X3DZnZ31XMM+srHpWaHUKQXI3wEycye5+5PmlmPpP+R9HqVRvIj7v5E1XHbVHoew3nu\n/rSZTUv6oLvfbmZ/I+l0d/9w+djPSPpjSU9JutDdj7S0U8BJMMJHqD5kZgdUehbBVkkvWX2AmfVK\nmpD04XLYnyFpk7vfXj7ky5LOrxyf1h1CkR4EPoJjZhdIeoOk33T3HZJ+KGnjqmOyKoX9de7+jQYv\nkbYdQpESBD5CdIakOXf/pZm9TKX90Z9V3iP9akkH3f2Kyuvu/pSkOTN7Xfmld0u6vfye1O4QivRo\nm90ygRb6rqT3l+vxD6pU1qk2qlKY/8jMpsqv/VX5+a7vkfTF8oNQfibpveWffzYtO4QivZi0BYBA\nUNIBgEAQ+AAQCAIfAAJB4ANAIAh8AAgEgQ8AgSDwASAQBD4ABOL/ASOIOW6cQKpxAAAAAElFTkSu\nQmCC\n",
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x7fd8d4e3d7f0>"
+       "<matplotlib.figure.Figure at 0x7fd8d4155400>"
       ]
      },
      "metadata": {},
@@ -528,7 +525,8 @@
     }
    ],
    "source": [
-    "df.plot('al2o3', 'mgo', 'scatter')"
+    "df.plot('al2o3', 'mgo', 'scatter')\n",
+    "plt.savefig('plot_output.png')"
    ]
   },
   {
