--- a/examples/stream_validation.ipynb
+++ b/examples/stream_validation.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,20 +18,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "elem = ElementValidator('SampleID')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "getting valid keys\n",
-      "getting valid values\n"
-     ]
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "elem = QueryElement('Reference')"
+    "elem.validate('')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "elem = ElementValidator('Reference')"
    ]
   },
   {
@@ -42,7 +62,7 @@
     {
      "data": {
       "text/plain": [
-       "{}"
+       "True"
       ]
      },
      "execution_count": 5,
@@ -51,7 +71,7 @@
     }
    ],
    "source": [
-    "elem"
+    "elem.validate({'author': 'barnes', 'journal': 'nature', 'doi': 'bar'})"
    ]
   },
   {
