Update Plotting Examples, Images

--- a/examples/plotting.ipynb
+++ b/examples/plotting.ipynb
@@ -12,7 +12,8 @@
     "import matplotlib.pyplot as plt\n",
     "from earthchem.formatting import cleanup_dataframe\n",
     "from earthchem.plot import spiderplot, ternaryplot, densityplot\n",
-    "from earthchem.geochem import REE"
+    "from earthchem.geochem import REE\n",
+    "from pyrolite.util.plot import save_figure"
    ]
   },
   {
@@ -40,7 +41,9 @@
     "            spiderplot(gdf, ax=ax[ix], alpha=0.4, plot=plot, fill=fill, components=REE(output='string'), label=g)\n",
     "\n",
     "ax[0].set_ylabel(\"Sample/Chondrite\")\n",
-    "ax[-1].legend(frameon=False, markerscale=3)"
+    "ax[-1].legend(frameon=False, markerscale=3)\n",
+    "\n",
+    "save_figure(fig, name='spiderplots', save_at=\"./../docs/resources\",save_fmts=['png'],)"
    ]
   },
   {
@@ -50,7 +53,8 @@
    "outputs": [],
    "source": [
     "oxides = ['MgO', 'CaO', 'SiO2']\n",
-    "ternaryplot(df, components=oxides, label='Goldstein and Francis');"
+    "tax = ternaryplot(df, components=oxides, label='Goldstein and Francis');\n",
+    "save_figure(tax.ax.figure, name='ternary', save_at=\"./../docs/resources\",save_fmts=['png'],)"
    ]
   },
   {
@@ -72,8 +76,17 @@
     "oxides = ['MgO', 'SiO2']\n",
     "fig, ax = plt.subplots(1, 3, figsize=(12, 4))\n",
     "for ix, mode in enumerate(['density', 'hist2d', 'hexbin']):\n",
-    "    densityplot(df, ax=ax[ix], components=oxides, mode=mode, bins=15, colorbar=True);"
+    "    densityplot(df, ax=ax[ix], components=oxides, mode=mode, bins=15, colorbar=True);\n",
+    "\n",
+    "save_figure(fig, name='density', save_at=\"./../docs/resources\",save_fmts=['png'],)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
